k8s/01-namespace.yml
---
# Namespace Definition
apiVersion: v1
kind: Namespace
metadata:
  name: sbe-gateway-service
