k8s/03-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sbe-gateway-service
  namespace: sbe-gateway-service
spec:
  selector:
    app.kubernetes.io/name: sbe-gateway
  ports:
  - port: 80
    protocol: TCP
    targetPort: http
    name: http
  type: ClusterIP
