k8s/04-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sbe-gateway-ingress
  namespace: sbe-gateway-service
  annotations:
   cert-manager.io/cluster-issuer: sbe-gateway-cert
spec:
  ingressClassName: kong
  tls:
    - hosts:
       -  "api.prod.etechdigital.com.ng"
      secretName: sbe-info-tls
  rules:
    - host:  "api.prod.etechdigital.com.ng"
      http:
        paths:
         - path: /
           pathType: ImplementationSpecific
           backend:
             service:
              name: sbe-gateway-service
              port:
                number: 80
